--- a/src/login.html
+++ b/src/login.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"> <!-- Include il file style.css -->
+    <link rel="stylesheet" href="/CSS/style.css"> <!-- Include il file style.css -->
     <title>Login</title>
 </head>
 <body>
-    <h2>Login</h2>
+    <h2>Benvenuto in Myshop, effettua il login per accedere al catalogo!</h2>
     <!-- Mostra il messaggio di errore, se presente -->
 
     <form action="login.php" method="POST">
