--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="style.css"> <!-- Aggiungi il tuo CSS se necessario -->
+    <link rel="stylesheet" href="/CSS/style.css"> <!-- Aggiungi il tuo CSS se necessario -->
 </head>
 <body>
 
@@ -12,20 +12,20 @@
         <h1>Benvenuto nella Dashboard</h1>
         <nav>
             <ul>
-                <li><a href="dashboard.php">Catalogo</a></li>
-                <li><a href="logout.php">Logout</a></li>
+                <!--   <li><a href="catalogo.html">Catalogo</a></li>  Collega il catalogo -->
             </ul>
         </nav>
     </header>
-
+    
     <main>
         <section>
-            <h2>Benvenuto nella tua area personale</h2>
-            <p>Esplora il nostro catalogo di articoli</p>
-            <!-- Il catalogo verrà caricato dinamicamente da dashboard.php -->
-            <a href="dashboard.php">Visualizza il catalogo</a>
+            <p><strong>Esplora il nostro catalogo di articoli</strong></p>           
+            <a href="catalogo.php">Visualizza il catalogo</a><br> <!-- Aggiungi il link a catalogo.html -->
+            <a href="logout.php" id="logout">Logout</a>
         </section>
     </main>
+</body>
+</html>
 
 </body>
 </html>
