--- a/src/login.html
+++ b/src/login.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 </head>
 <body>
-    <h2>Benvenuto in Myshop, effettua il login per accedere al catalogo!</h2>
+    <h2>Benvenuto in Myshop eCommerce, effettua il login per accedere al catalogo!</h2>
     <!-- Mostra il messaggio di errore, se presente -->
 
     <form action="login.php" method="POST">
